--- a/config.yaml.example
+++ b/config.yaml.example
@@ -14,7 +14,7 @@ buffer_time:
 
 # The Elasticsearch hostname for metadata writeback
 # Note that every rule can have its own Elasticsearch host
-es_host: elasticsearch.example.com
+es_host: localhost
 
 # The Elasticsearch port
 es_port: 9200
